@@ -16,7 +16,7 @@
  * specific language governing permissions and limitations
  * under the License.
  *
- * Copyright 2026 SiteNetSoft - Fixed deprecated API usages and code quality warnings
+ * Copyright 2026 SiteNetSoft - Replaced Apache Commons with Java standard library
  */
 package org.sitenetsoft.olinguito.server.core.serializer.json;
 
@@ -36,7 +36,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import org.apache.commons.io.IOUtils;
 import org.sitenetsoft.olinguito.commons.api.edm.Edm;
 import org.sitenetsoft.olinguito.commons.api.edm.EdmAnnotation;
 import org.sitenetsoft.olinguito.commons.api.edm.EdmEnumType;
@@ -128,7 +127,7 @@ public class MetadataDocumentJsonSerializerTest {
     when(metadata.getEdm()).thenReturn(edm);
 
     assertEquals("{\"$Version\":\"4.01\"}",
-        IOUtils.toString(serializer.metadataDocument(metadata).getContent(), StandardCharsets.UTF_8));
+        new String(serializer.metadataDocument(metadata).getContent().readAllBytes(), StandardCharsets.UTF_8));
   }
   
   @Test
@@ -188,7 +187,7 @@ public class MetadataDocumentJsonSerializerTest {
 
     InputStream metadata = serializer.metadataDocument(serviceMetadata).getContent();
     assertNotNull(metadata);
-    final String metadataString = IOUtils.toString(metadata, StandardCharsets.UTF_8);
+    final String metadataString = new String(metadata.readAllBytes(), StandardCharsets.UTF_8);
     // edmx reference
     assertTrue(metadataString.contains(
         "\"$Reference\":{\"http://example.com\":{},"));
@@ -270,7 +269,7 @@ public class MetadataDocumentJsonSerializerTest {
     
     InputStream metadata = serializer.metadataDocument(serviceMetadata).getContent();
     assertNotNull(metadata);
-    String metadataString = IOUtils.toString(metadata, StandardCharsets.UTF_8);
+    String metadataString = new String(metadata.readAllBytes(), StandardCharsets.UTF_8);
 
 
     assertTrue(metadataString.contains(
@@ -295,7 +294,7 @@ public class MetadataDocumentJsonSerializerTest {
     InputStream metadata = serializer.metadataDocument(serviceMetadata).getContent();
     assertNotNull(metadata);
     assertEquals("{\"$Version\":\"4.01\",\"MyNamespace\":{}}",
-        IOUtils.toString(metadata, StandardCharsets.UTF_8));
+        new String(metadata.readAllBytes(), StandardCharsets.UTF_8));
   }
   
   @Test
@@ -348,7 +347,7 @@ public class MetadataDocumentJsonSerializerTest {
     
     InputStream metadata = serializer.metadataDocument(serviceMetadata).getContent();
     assertNotNull(metadata);
-    String metadataStr = IOUtils.toString(metadata, StandardCharsets.UTF_8);
+    String metadataStr = new String(metadata.readAllBytes(), StandardCharsets.UTF_8);
     assertEquals("{\"$Version\":\"4.01\","
         + "\"MyNamespace\":"
         + "{\"MyTypeDefinition\":{"
@@ -487,7 +486,7 @@ public class MetadataDocumentJsonSerializerTest {
     CsdlEdmProvider provider = new LocalProvider();
     ServiceMetadata serviceMetadata = new ServiceMetadataImpl(provider, Collections.emptyList(), null);
     InputStream metadataStream = serializer.metadataDocument(serviceMetadata).getContent();
-    String metadata = IOUtils.toString(metadataStream, StandardCharsets.UTF_8);
+    String metadata = new String(metadataStream.readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(metadata);
     return metadata;
   }
